--- a/styles.css
+++ b/styles.css
@@ -1,33 +1,41 @@
 html, body{
     height: 100%;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 body{
     display: flex;
     justify-content: center;
     align-items: center;
+    background-color: gainsboro;
 }
 #container{
     display: flex;
     flex-direction: column;
+    border: 1px solid black;
 }
 #screen{
     display: flex;
+    box-sizing: border-box;
     justify-content: end;
     align-items: center;
-    border: 2px solid black;
+    border: 1px solid black;
+    border-bottom: .5px;
     width: 144px;
-    height: 36px;
+    height: 45px;
+    color: white;
+    background-color: rgb(76, 76, 76);
 }
 #screenVal{
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 26px;
     font-weight: 500;
     margin: 5px;
 
 }
 
 #btns{
-    border: 2px solid black;
+
     display: flex;
     flex-direction: column;
     width: fit-content;
@@ -36,6 +44,8 @@ body{
 #btnsMisc{
     display: flex;
     width: 108px;
+    background-color: gray;
+    color: white;
 }
 
 #temp{
@@ -47,16 +57,20 @@ body{
     display: flex;
     width: 108px;
     flex-wrap: wrap;
+    background-color: rgb(164, 164, 164);
+    color: white;
 }
 
 #btnsOperators{
     margin-top: -36px;
+    background-color:  orange ;
+    color: white;
 }
 
 .btn{
     flex: 1 1 auto;
     box-sizing:border-box;
-    border: 1px solid black;
+    border: .5px solid black;
     height: 36px;
     width: 36px;
     display: flex;
