--- a/styles.css
+++ b/styles.css
@@ -25,12 +25,14 @@ body{
     height: 45px;
     color: white;
     background-color: rgb(76, 76, 76);
+    
 }
 #screenVal{
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-size: 26px;
+    font-size: auto;
     font-weight: 500;
     margin: 5px;
+
 
 }
 
